@@ -1090,6 +1090,43 @@ d-i partman/confirm boolean true
 
   </sect2>
 
+  <sect2 id="preseed-partman-mount-styles">
+  <title>Controlling how partitions are mounted</title>
+<para>
+
+Normally, filesystems are mounted using a universally unique identifier
+(UUID) as a key; this allows them to be mounted properly even if their
+device name changes. UUIDs are long and difficult to read, so, if you
+prefer, the installer can mount filesystems based on the traditional device
+names, or based on a label you assign. If you ask the installer to mount by
+label, any filesystems without a label will be mounted using a UUID instead.
+
+</para><para>
+
+Devices with stable names, such as LVM logical volumes, will continue to use
+their traditional names rather than UUIDs.
+
+</para>
+
+<warning><para>
+
+Traditional device names may change based on the order in which the kernel
+discovers devices at boot, which may cause the wrong filesystem to be
+mounted. Similarly, labels are likely to clash if you plug in a new disk or
+a USB drive, and if that happens your system's behaviour when started will
+be random.
+
+</para></warning>
+
+<informalexample role="example"><screen>
+# The default is to mount by UUID, but you can also choose "traditional" to
+# use traditional device names, or "label" to try filesystem labels before
+# falling back to UUIDs.
+#d-i partman/mount_style select uuid
+</screen></informalexample>
+
+  </sect2>
+
   <sect2 id="preseed-base-installer">
   <title>Base system installation</title>
 <para>
